Added a clear button which also functions to resize the grid to a specified size

--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
         }
         .container{
             display: grid;
-            height: 650px;
-            width: 650px;
+            height: 600px;
+            width: 600px;
             margin: 0 auto;
-            box-shadow: 3px 3px 5px -1px rgb(196, 195, 195);
+            box-shadow: 0px 0px 10px 2px rgb(219, 215, 215);
 
         }
 
         .box{
-            border: 1px solid rgb(151, 151, 151);
+            
         }
         /*.box:hover{
             background-color: grey;
@@ -36,6 +36,7 @@
 </head>
 <body>
     <h1>Etch-A-Sketch</h1>
+    <button id="clear">Clear</button>
     <div class=container></div>
 </body>
 </html>
