--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         }
         h1{
             font-size: 50px;
-            color: rgba(0, 0, 0, 0.603);
+            color: rgb(107, 107, 107);
             text-align: center;
         }
 
@@ -90,7 +90,10 @@
     <div id="main">
         <div class="buttons">
             <button id="clear">Clear</button>
-            <button id="color"> Color </button>
+            <button>
+                <label for="color">Color</label>
+                <input type="color" id="color" value=rgb(107, 107, 107)>
+            </button>
             <button id="rainbow"> Rainbow </button>
             <button id="darken"> Darken </button>
         </div>
