Added an erase feature

--- a/index.html
+++ b/index.html
@@ -92,10 +92,11 @@
             <button id="clear">Clear</button>
             <button>
                 <label for="color">Color</label>
-                <input type="color" id="color" value=rgb(107, 107, 107)>
+                <input type="color" id="color" value="rgb(107, 107, 107)">
             </button>
             <button id="rainbow"> Rainbow </button>
             <button id="darken"> Darken </button>
+            <button id="erase"> Erase </button>
         </div>
         <div class=container></div>
     </div>
